2011-07-09  Ilija Kocho  <ilijak@siva.com.mk>

	* tests/bin_sem2.cxx (PHILOSOPHERS):
	* tests/fptest.cx (TEST_NA):
	* tests/kmutex3.c (NTHREADS):
	* tests/kmutex4.c (NTHREADS):
	* tests/mutex3.cxx (NTHREADS):
	* tests/thread_gdb.c (NTHREADS):
	* tests/timeslice.c (NTHREADS_MAX):
	* tests/timeslice2.c (NTHREADS_MAX):
	* tests/tm_basic.cxx (NTEST_THREADS): Given a chance to compile and
	run more tests for low memory footprint targets. [ Bugzilla 1001253 ]

2010-11-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/intr0.cxx (intr0_main): Fix a compiler warning by changing
	a CHECK() statement.

2010-03-29  Lars Povlsen  <lpovlsen@vitesse.com>

	* src/common/thread.cxx: Add volatile to idle_thread_loops for use with
	cpuload package and GCC 4.

2010-02-25  John Dallaway  <john@dallaway.org.uk>

	* doc/kernel.sgml: Indicate that cyg_alarm_initialize() takes an
	absolute trigger value. Issue reported by Grant Edwards.
	* cdl/kernel.cdl: Reference the kernel instrumentation documentation.

2010-01-27  John Dallaway  <john@dallaway.org.uk>

	* include/instrmnt.h: Add instrumentation macros for event flags and
	the bitmap scheduler.
	* include/instrument_desc.h: Regenerate.
	* src/sync/flag.cxx, src/sched/bitmap.cxx: Add instrumentation.
	* cdl/instrument.cdl: Add CYGDBG_KERNEL_INSTRUMENT_FLAG and
	CYGDBG_KERNEL_INSTRUMENT_BITMAP options.

2009-10-04  John Dallaway  <john@dallaway.org.uk>

	* cdl/instrument.cdl: Add CYGDBG_KERNEL_INSTRUMENT_MLQ option. Issue
	reported by Pieter-Jan Busschaert.

2009-08-24  John Dallaway  <john@dallaway.org.uk>

	* doc/kernel.sgml: Use "reinterpret_cast" throughout the C++ thread
	entry point example. [ Bugzilla 1000550 ]

2009-05-14  John Dallaway  <john@dallaway.org.uk>

	* src/common/thread.cxx: Use the Cyg_Scheduler::get_current_thread()
	convenience function when instrumenting thread events. Bug reported
	by Pieter-Jan Busschaert.

2008-12-18  Jonathan Larmour  <jifl@eCosCentric.com>
