@@ -1,3 +1,8 @@
+2012-03-06  Grant Edwards <grant.b.edwards@gmail.com>
+	
+	* src/intr/intr.cxx (attach): Fix compiler warning about unused
+	variable. [ Bugzilla 1001505 ]
+
 2011-07-09  Ilija Kocho  <ilijak@siva.com.mk>
 
 	* tests/bin_sem2.cxx (PHILOSOPHERS):
